--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "azyrnyx-backend",
   "version": "1.0.0",
-  "description": "Azyrnyx backend server for shard redemption and login",
-  "type": "module",
+  "description": "Backend for Azyrnyx",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.18.2"
   }
 }
